refactor: orphanRemoval 을 최대한 활용하기 위해 CheerTags 에 set 로직 추가